修改jvm参数的设置